--- a/src/companents/ExamQuestions/ExamQuestion.module.css
+++ b/src/companents/ExamQuestions/ExamQuestion.module.css
@@ -1,15 +1,64 @@
-.questions{
+.questions {
     background: #FFFFFF;
-box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
-border-radius: 14px;
-padding: 50px 30px;
+    box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
+    border-radius: 14px;
+    padding: 50px 30px;
 }
-.heading{
+
+.heading {
     text-align: center;
+    margin-bottom: 46px;
 }
-.student-name{
+
+.student-name {
     width: 869px;
+    height: 46px;
+    background: #FFFFFF;
+    border: 1px solid #D2D2D2;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 14px;
 }
-.exam-time{
+
+.student-name span {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: #2B2A2A;
+}
+
+.exam-time {
     width: 280px;
+    height: 46px;
+    background: #FFFFFF;
+    border: 1px solid #D2D2D2;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 14px;
+}
+
+.exam-time span {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: #2B2A2A;
+}
+
+.items {
+    display: flex;
+    gap: 77px;
+}
+.timer{
+font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 27px;
+color: #2B2A2A;
+color: red;
 }
