--- a/src/companents/VideoCard/VideoCard.module.css
+++ b/src/companents/VideoCard/VideoCard.module.css
@@ -42,12 +42,42 @@ color: #2B2A2A;
     overflow: hidden;   
     position: relative;
 }
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.15);
+}
 .play-btn{
     width: 46px;
     height: 46px;
-    border: 4px solid #E2E2E2;
+    border: 4px solid #FFFFFF;
     position: absolute;
-      top: 0;
-      left: 0;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
       border-radius: 50%;
+      cursor: pointer;
+      z-index: 9999;
+}
+.play path{
+    fill: #FFFFFF;
+}
+.pause{
+width: 26px;
+height: 26px;
+display: none;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+z-index: 9999;
+}
+.pause path{
+    fill: #FFFFFF;
 }
