--- a/src/companents/ExamQuestions/ExamQuestion.module.css
+++ b/src/companents/ExamQuestions/ExamQuestion.module.css
@@ -1,8 +1,11 @@
-.questions {
+.questions-page {
     background: #FFFFFF;
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
     border-radius: 14px;
     padding: 50px 30px;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
 }
 
 .heading {
@@ -94,6 +97,6 @@
     color: #2B2A2A;
 }
 
-.start-button {
+.start-btn {
     width: 219px;
 }
